// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`daemon status rendering > omits the retention rows entirely for a daemon that predates them 1`] = `
"Daemon Status
Daemon
  Version      0.7.0
  PID          4242
  Started at   2026-03-17T10:00:00.000Z
  WSS port     8443
  Pinned keys  1
  Sessions     1

Policy
  Default      allow
  Destructive  deny
  Overrides    0

Audit
  Path           /tmp/state/audit
  Failed writes  3
"
`;

exports[`daemon status rendering > renders the audit footprint with a human-readable size 1`] = `
"Daemon Status
Daemon
  Version      0.7.0
  PID          4242
  Started at   2026-03-17T10:00:00.000Z
  WSS port     8443
  Pinned keys  1
  Sessions     1

Policy
  Default      allow
  Destructive  deny
  Overrides    0

Audit
  Path           /tmp/state/audit
  Retention      30 days
  Files          12
  Size           1.5 MiB
  Failed writes  0
  Failed prunes  2
"
`;

exports[`output rendering > human errors render on stderr 1`] = `
"Command Failed
Error
  Type     tool_execution_error
  Message  The tool handler threw.
  Details  {"hint":"test"}
"
`;

exports[`output rendering > init output shows the config, the pasteable MCP entry and the next steps 1`] = `
"Project Initialized
Config
  Path     /apps/demo/.appduct/config.json
  Scheme   myapp
  Source   app.json
  Written  created

MCP server entry
  {
    "mcpServers": {
      "appduct": {
        "command": "appduct",
        "args": [
          "mcp",
          "--scheme",
          "myapp"
        ]
      }
    }
  }

Next
  1. Add \`import "@appduct/react-native/auto";\` to your app entry.
"
`;

exports[`output rendering > invoke human output prints the raw tool result 1`] = `
"Result
{"echoed":"hello"}
"
`;

exports[`output rendering > keygen success output includes the key path and fingerprint 1`] = `
"Key Ready
Key
  Path         /tmp/appduct-key.pem
  Fingerprint  sha256/example
"
`;

exports[`output rendering > link human output includes the deep link and expiry 1`] = `
"Link Created
Link
  Session    LinkOutputTestSess1
  Deep link  playground:///?appduct=abc123&pin=sha256%2Fexample
  Endpoint   wss://192.168.1.10:8443
  Pin        sha256/example
  Expires    2026-03-17T10:00:30.000Z
"
`;

exports[`output rendering > ls human output handles an empty session list 1`] = `
"Sessions
  No Appduct sessions are registered.
"
`;

exports[`output rendering > ls human output includes alias, state, device, tools, and age 1`] = `
"Sessions
  Alias    State   Device                       Tools  Age
  pixel-8  active  Google Pixel 8 (Android 14)  3      1m 
"
`;

exports[`output rendering > tools detail output renders full schema/annotations 1`] = `
"Tool: echo
  Signature     echo(...)
  Description   Echo a payload on the connected device.
  Input schema  {"type":"object"}
  Annotations   {"readOnlyHint":true}
"
`;

exports[`output rendering > tools list output stays structured 1`] = `
"Tools
  echo(...) -> ...
    Echo a payload on the connected device.

Run \`appduct tools <name>\` for a tool's full schema.
"
`;
